--- a/style.css
+++ b/style.css
@@ -717,12 +717,10 @@ a,
       }
     }
     .mobile-welcome-text {
-        display: block;
-        text-align: center;
-        font-size: 1.2rem;
-        font-weight: 600;
-        margin: 1rem 0;
-        color: #ff5400;
+        font-size: 2rem;
+        font-weight: 700;
+        white-space: nowrap;
+        animation: fadeInLeftOut 5s ease-in-out infinite;
       }
       .profile__content {
         flex-direction: column;
